# exercise-text-rendering

./: CMakeLists.txt  conanfile.txt
src/: main.cpp
